JohnBryce-Lessons/2026.01.20/01 - P1/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
  - port: 80           
    targetPort: 8000    
  type: ClusterIP
